test/users/shetag/objRefAsFormArg.good
objRefAsFormArg.chpl:10: In function '_construct_B':
objRefAsFormArg.chpl:11: error: type mismatch in assignment from object to A
